Implement post report auth. And separate reports and bots tables.
