# src/controllers/botim-controller.ts
@@ -19,7 +19,7 @@ import {
 	SuccessResponse,
 	Tags
 } from 'tsoa';
-import { BotMeta, Report } from '../models/symbols';
+import { Bots, Report } from '../models/symbols';
 
 @Tags('Botim')
 @Route('botim')
@@ -29,16 +29,17 @@ export class BotimController extends Controller {
      */
 	@Response(501, 'Server error')
 	@Get('confirmed')
-	public async getConfirmed(): Promise<BotMeta[]> {
-		return await getBotIds();
+	public async getConfirmed(@Query() userIds: string[]): Promise<Bots> {
+		return await getBotIds(userIds);
 	}
 
 	/**
      * Report a bot.
      */
 	@Response(501, 'Server error')
+	@Security('reporterAuth')
 	@Post('suspected')
 	public async reportSuspected(@Body() report: Report): Promise<void> {
-		await createUserIds(report.userId, true);
+		await createUserIds(report);
 	}
 }
